--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,11 @@
 story_orphanqueries_ignore.txt
 story_orphanqueries_found.txt
 
-# Unwanted test files#
+# Various            #
 ######################
+*.bak
+ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Projects/*
+ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Mods/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/*.png
 ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Public/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Lists/*
 ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Public/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Progressions/*
 ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Mods/ImpUI_26922ba9-6018-5252-075d-7ff2ba6ed879/Story/RawFiles/Goals/*
